<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/assetDetailsTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/asset_details_title"
            style="@style/detailLabel"
            android:textSize="22sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/assetTitle_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/assetDetailsTitle"
            android:text="@string/asset_title"
            style="@style/detailLabel"
            />

        <TextView
            android:id="@+id/uuid_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/assetTitle_label"
            android:text="@string/asset_uuid"
            style="@style/detailLabel"
            />

        <TextView
            android:id="@+id/id_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uuid_label"
            android:text="@string/asset_id"
            style="@style/detailLabel"
            />

        <TextView
            android:id="@+id/fileType_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_label"
            android:text="@string/asset_filetype"
            style="@style/detailLabel"
            />
        <TextView
            android:id="@+id/expectedSize_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fileType_label"
            android:text="@string/expectedSize"
            style="@style/detailLabel"
            />
        <TextView
            android:id="@+id/currentSize_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expectedSize_label"
            android:text="@string/currentSize"
            style="@style/detailLabel"
            />
        <TextView
            android:id="@+id/duration_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentSize_label"
            android:text="@string/duration"
            style="@style/detailLabel"
            />
        <TextView
            android:id="@+id/status_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/duration_label"
            android:text="@string/downloadStatus"
            style="@style/detailLabel"
            />
        <TextView
            android:id="@+id/path_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_label"
            android:text="@string/assetPath"
            style="@style/detailLabel"
            />
        <TextView
            android:id="@+id/pathValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/path_label"
            style="@style/detailValue"
            />
        <TextView
            android:id="@+id/playlist_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pathValue"
            android:text="@string/playlist"
            style="@style/detailLabel"
            />
        <TextView
            android:id="@+id/playlistValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_label"
            style="@style/detailValue"
            />
        <TextView
            android:id="@+id/segmentcount_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlistValue"
            android:text="@string/segmentCount"
            style="@style/detailLabel"
            />
        <TextView
            android:id="@+id/firstplay_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/segmentcount_label"
            android:layout_marginTop="6dp"
            android:text="@string/firstPlayTime"
            style="@style/detailLabel"
            />

        <TextView
            android:id="@+id/assetTitleValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/assetTitle_label"
            style="@style/detailValue"
            />
        <TextView
            android:id="@+id/uuidValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/uuid_label"
            style="@style/detailValue"
            />
        <TextView
            android:id="@+id/idValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/id_label"
            style="@style/detailValue"
            />
        <TextView
            android:id="@+id/fileTypeValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fileType_label"
            style="@style/detailValue"
            />
        <TextView
            android:id="@+id/expectedSizeValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/expectedSize_label"
            style="@style/detailValue"
            />
        <TextView
            android:id="@+id/currentSizeValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/currentSize_label"
            style="@style/detailValue"
            />
        <TextView
            android:id="@+id/durationValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/duration_label"
            style="@style/detailValue"
            />
        <TextView
            android:id="@+id/statusValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/status_label"
            style="@style/detailValue"
            />
        <TextView
            android:id="@+id/segmentCountValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/segmentcount_label"
            style="@style/detailValue"
            />
        <TextView
            android:id="@+id/firstPlayValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/firstplay_label"
            style="@style/detailValue"
            />

        <LinearLayout
            android:id="@+id/row_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/firstplay_label"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_play"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/play" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>